# CarrotInvoke

./: .gitignore  AGENTS.md  CMakeLists.txt  CarrotInvoke.sln  CarrotInvoke.vcxproj  CarrotInvoke.vcxproj.filters  README.md  README.zh-CN.md  build.bat
CarrotInvoke/: CarrotInvoke.vcxproj  CarrotInvoke.vcxproj.filters
CarrotInvoke.Demo/: CarrotInvoke.Demo.c  CarrotInvoke.Demo.vcxproj  CarrotInvoke.Demo.vcxproj.filters  func.c  func.h  main.c
CarrotInvoke.Test/: CarrotInvoke.DynamicCall.Test.cpp  CarrotInvoke.DynamicPool.Test.cpp  CarrotInvoke.Test.vcxproj  CarrotInvoke.Test.vcxproj.filters  CmdParse.Test.cpp  DynCall.Test.cpp  DynPool.Test.cpp  pch.h
CarrotInvoke/inc/: cmdcall.h  cmdparse.h  dyncall.h  dynpool.h
CarrotInvoke/src/: cmd_parse.c  cmdparse.c  dyncall.c  dynpool.c
docs/: rpc_usage.md
examples/: cmdqueue_demo.c  cmdscan_demo.c  dispatch_demo.c  func.h  invoke_demo.c  ringbuf_demo.c  rpclog_demo.c
inc/: cmd_parse.h  cmdqueue.h  cmdscan.h  dispatch.h  dynamic_call.h  dynamic_pool.h  dyncall.h  dynpool.h  invoke.h  ringbuf.h  rpc.h  rpc_cfg.h  rpclog.h  typeconv.h
src/: cmd_parse.c  cmdparse.c  cmdqueue.c  cmdscan.c  dispatch.c  dynamic_call.c  dynamic_pool.c  dyncall.c  dynpool.c  invoke.c  ringbuf.c  rpclog.c  typeconv.c
tests/: main_test.c  test_cmdparse.c  test_cmdqueue.c  test_cmdscan.c  test_dispatch.c  test_dyncall.c  test_dynpool.c  test_e2e.c  test_helpers.c  test_helpers.h  test_invoke.c  test_invoke_helpers.c  test_invoke_helpers.h  test_ringbuf.c  test_rpclog.c  test_typeconv.c
